# shell-ai

./: README.md  mcp.config.json  pyproject.toml
cli/: agent.py  cli.py  state.py
cli/mcp/: client.py
cli/mcp/servers/: github_server.py
cli/tools/: run_command.py
cli/utils/: debug_logger.py  lexer.py  pat_utils.py  run_command_input.py  token_counter.ipynb  tool_result.py
