[project]
name = "shell-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.9",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "pyfiglet>=1.0.4",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
shellai = "cli.cli:main"
