[project]
name = "shell-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.9",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "typer>=0.24.1",
]

[project.scripts]
shellai = "cli.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
