[project]
name = "shell-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.9",
    "langsmith>=0.7.7",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "typer>=0.24.1",
]

[project.scripts]
shellai = "cli.cli:run"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
